syntax = "proto3";
package messages;
import "google/protobuf/empty.proto";

message Envelope {
  oneof msg {
    // router <-> worker
    Ping ping = 1;
    WorkerState state_update = 2;

    // client <-> worker
    Query query = 5;
    QueryResult query_result = 6;
    RangeSet dataset_state = 7;

    // metrics
    QuerySubmitted query_submitted = 8;
    QueryFinished query_finished = 9;
    QueryExecuted query_executed = 10;
  }
}

message Range {
  uint32 begin = 1;
  uint32 end = 2;
}

message RangeSet {
  repeated Range ranges = 1;
}

message WorkerState {
  map<string, RangeSet> datasets = 1;
}

message Ping {
  string worker_id = 1;
  string worker_url = 2;
  WorkerState state = 3;
  bool pause = 4;
  uint64 stored_bytes = 5;
}

message Query {
  string query_id = 1;
  string dataset = 2;
  string query = 3;
  bool profiling = 4;
}

message QueryResult {
  string query_id = 1;
  oneof result {
    OkResult ok = 2;
    string bad_request = 3;
    string server_error = 4;
  }
}

message OkResult {
  bytes data = 1;
  optional bytes exec_plan = 2;
}

message QuerySubmitted {
  string client_id = 1;
  string worker_id = 2;
  string query_id = 3;

  string dataset = 4;
  string query = 5;
  bytes query_hash = 6;
}

message QueryFinished {
  string client_id = 1;
  string worker_id = 2;
  string query_id = 3;

  uint32 exec_time_ms = 4;
  oneof result {
    SizeAndHash ok = 5;
    string bad_request = 6;
    string server_error = 7;
    google.protobuf.Empty timeout = 8;
  }
}

message QueryExecuted {
  string client_id = 1;
  string worker_id = 2;
  string query_id = 3;

  string dataset = 4;
  bytes query_hash = 5;

  uint32 exec_time_ms = 6;
  oneof result {
    InputAndOutput ok = 7;
    string bad_request = 8;
    string server_error = 9;
  }
}

message InputAndOutput {
  uint32 num_read_chunks = 1;
  SizeAndHash output = 2;
}

message SizeAndHash {
  uint32 size = 1;
  bytes sha3_256 = 2;
}
